--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Eco-Gypsum | Circular Economy 3R Technology</title>
-  <meta name="description" content="Eco-Gypsum: Patented 3R innovation converting multiple industrial wastes into sustainable gypsum for cement. Circular economy, zero residue, import substitute." />
+  <title>Eco-Bounty | Circular Economy 3R Technology</title>
+  <meta name="description" content="Eco-Bounty: Patented 3R innovation converting multiple industrial wastes into sustainable gypsum for cement. Circular economy, zero residue, import substitute." />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
