--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     .mobile-menu-button.active span:nth-child(3){ transform: rotate(45deg) translate(-5px,-6px);} 
 
     /* Hero */
-    .hero { height: 100vh; background: url('./assets/newBack2.png') center/cover no-repeat fixed; display:flex; align-items:center; justify-content:center; text-align:center; color:#fff; }
+    .hero { height: 100vh; background: url('./assets/background1.jpg') center/cover no-repeat fixed; display:flex; align-items:center; justify-content:center; text-align:center; color:#fff; }
     .hero h1 { font-size:3.2rem; font-weight:800; line-height:1.2; margin-bottom:1rem; text-shadow: 2px 2px 5px rgba(66,158,189,.8); }
     .hero .accent { color: var(--accent-color); text-shadow: 2px 2px 5px rgba(191,229,241,1); }
     .hero p { font-size:1.15rem; opacity:.95; margin-bottom:1.5rem; text-shadow: 2px 2px #000; }
