Update Hero taglines, Technology highlights, and Contact section headings

--- a/index.html
+++ b/index.html
@@ -178,10 +178,11 @@
         <div class="card" style="background:rgba(255,255,255,.98);">
           <h3>Technology Highlights</h3>
           <ul class="bullet-list">
-            <li>Full Mass Conversion: 100% utilization of diverse industrial residues</li>
-            <li>Neutral & Non-Acidic Product: Cement-friendly gypsum without effluent discharge</li>
-            <li>Smart Import Substitute: Sustainable replacement for natural gypsum</li>
-            <li>Scalable & Proven: Flexible for cement industry expansion needs</li>
+            <li>Product Proven & Scalable</li>
+            <li>Full wastes conversion - Zero Effluent / No Leftover</li>
+            <li>Sustainable ESG Compliant / Climate Positive</li>
+            <li>Cost Effective supporting Cement Industry Green Growth</li>
+            <li>Introducing Eco Gypsum Filler - Low cost blending</li>
           </ul>
         </div>
         <div class="card" style="background:rgba(255,255,255,.98);">
@@ -277,7 +278,7 @@
       <p class="section-subtitle">Reach out to explore pilots, specifications, and supply partnerships.</p>
       <div class="grid-2">
         <div class="card">
-          <h3>Contact Information</h3>
+          <h3>Contact Us</h3>
           <p class="mb-1"><strong>Mobile:</strong> +91 9829044741</p>
           <p class="mb-1"><strong>Email:</strong>ecobountyhighway@gmail.com</p>
         </div>
@@ -315,18 +316,11 @@
 
     // Rotating main tagline (two lines)
     const taglines = [
-      [
-        'Eco-Gypsum: Circular Economy in Action',
-        'Turning Industrial Wastes into Sustainable Cement Solutions.'
-      ],
-      [
-        'From Waste to Worth',
-        'Patented 3R Innovation Delivering Eco-Gypsum for a Green Future.'
-      ],
-      [
-        'Protecting Environment. Preserving Resources.',
-        'Powering Cement Growth.'
-      ]
+      ['Industrial Waste Monetization', '3R Prosperity through ARM Resource Recovery'],
+      ['Patented Innovation', 'Delivering Eco-Gypsum - Smart Import Substitute'],
+      ['Chemical Gypsum Revolution', 'Powering Cement Growth'],
+      ['Circular Economy in Action', 'Multiple Industrial Wastes Novel Reuse'],
+      ['Protects Environment', 'Cleantech Neighborhood - No Land Filling']
     ];
     const mainTagline1 = document.getElementById('mainTagline1');
     const mainTagline2 = document.getElementById('mainTagline2');
@@ -339,7 +333,7 @@
     setInterval(()=>{
       taglineIndex = (taglineIndex + 1) % taglines.length;
       setTagline(taglineIndex);
-    }, 3500);
+    }, 4000);
   </script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
 </body>
